# libjoycon

./: .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: cmake.yml
examples/: .gitignore  CMakeLists.txt  README.md  hidapi_connection.h  joycon_getcolor.c  joycon_getimage.c  joycon_helloworld.c  joycon_imumapping.c  joycon_imumapping.h  joycon_imumapping_opengl.c  joycon_midi.py  joycon_midi_input.py  joycon_playergyz.py  joycon_playerlight.c  joycon_playerlight.py  joycon_playmxbc.c  joycon_taichi_fractal.py
include/: features.h  imu.h  input_report.h  ir.h  libjoycon.h  light.h  mcu.h  output_report.h  packet.h  rumble.h  spi.h  types.h
src/: CMakeLists.txt  imu.c  input_report.c  ir.c  mcu.c  packet.c  rumble.c  spi.c
swig/: libjoycon.i
tests/: CMakeLists.txt  compile_mxbc.sh  test_input_report.c  test_ir.c  test_packet_encode.c  test_packet_ir_encode.c  test_packet_light_encode.c  test_player_light.c  test_rotating_cube.c  test_rumble_encode.c  test_rumble_mxbc.c  test_spi_encode.c  test_spi_read.c  test_voltage_read.c
