cmake_minimum_required(VERSION 3.11)

set(LIBJOYCON_VERSION_MAJOR 0)
set(LIBJOYCON_VERSION_MINOR 0)
set(LIBJOYCON_VERSION_PATCH 2)
set(LIBJOYCON_VERSION ${LIBJOYCON_VERSION_MAJOR}.${LIBJOYCON_VERSION_MINOR}.${LIBJOYCON_VERSION_PATCH})

project(LIBJOYCON LANGUAGES C VERSION ${LIBJOYCON_VERSION})

include_directories(LIBJOYCON ${CMAKE_SOURCE_DIR}/include)
add_subdirectory(src)

# TODO: Add public header
# set_target_properties(LIBJOYCON PROPERTIES PUBLIC_HEADER libjoycon.h)

if(BUILD_TESTING)
    add_subdirectory(tests)
endif()
